# camera_simulation

./: CMakeLists.txt  README.md  package.xml
launch/: camera_rviz.launch  camera_world.launch
models/my_cloud/: model.config  model.sdf
models/my_cloud/meshes/: cloud.stl
models/solar_plant/: model.config  model.sdf
scripts/: cloud_manager.py  sun_pos.py  test_sun_pos.py
srv/: SpawnClouds.srv
urdf/: camera.gazebo  camera.xacro  cloud.sdf
worlds/: camera.world
